Set game message color

--- a/style/custom.less
+++ b/style/custom.less
@@ -91,3 +91,11 @@ html, body {
 	}
 
 }
+
+//MESSAGE
+
+.game-container {
+	.game-won, .game-over {
+		background-color: fade(@basecolor, 40%) !important;
+	}
+}
