--- a/style/custom.less
+++ b/style/custom.less
@@ -110,6 +110,13 @@ button {
 	.font;
 }
 
+.pure-button-primary {
+	background-color: @bgcolor !important;
+	&:hover, &:focus, &:active {
+		background-color: darken(@bgcolor, 2%) !important;
+	}
+}
+
 
 //MESSAGE
 
@@ -118,7 +125,7 @@ button {
 		font-size:16px;
 	}
 	.game-won, .game-over {
-		background-color: fade(@basecolor, 40%) !important;
+		background-color: fade(@basecolor, 70%) !important;
 	}
 }
 
