--- a/style/main.css
+++ b/style/main.css
@@ -552,7 +552,7 @@ hr {
         margin-top: 200px; }
       .game-container .game-message a {
         display: inline-block;
-        background: #8f7a66;
+        /*background: #8f7a66;*/
         border-radius: 3px;
         padding: 0 20px;
         text-decoration: none;
