--- a/style/main.css
+++ b/style/main.css
@@ -180,10 +180,10 @@ hr {
       font-weight: bold;
       height: 60px;
       line-height: 60px;
-      margin-top: 100px; }
+      margin-top: 0px; }
     .game-container .game-message .lower {
       display: block;
-      margin-top: 200px; }
+      margin-top: 0px; }
       .game-container .game-message p a {
         background:transparent;
         text-decoration: underline;
@@ -546,10 +546,10 @@ hr {
         font-weight: bold;
         height: 60px;
         line-height: 60px;
-        margin-top: 222px; }
+        margin-top: 0px; }
       .game-container .game-message .lower {
         display: block;
-        margin-top: 200px; }
+        margin-top: 0px; }
       .game-container .game-message a {
         display: inline-block;
         /*background: #8f7a66;*/
@@ -672,10 +672,5 @@ hr {
   .tile .tile-inner {
     font-size: 35px; }
 
-  .game-message p {
-    font-size: 30px !important;
-    height: 30px !important;
-    line-height: 30px !important;
-    margin-top: 90px !important; }
   .game-message .lower {
-    margin-top: 100px !important; } }
+    margin-top: 0px; } }
