--- a/style/custom.less
+++ b/style/custom.less
@@ -52,6 +52,10 @@ button {
 	font-size: 18px;
 	.font;
 	font-weight: bold;
+	@media screen and (max-width: 520px) {
+		font-size: 12px;
+		padding: .6em 1em;
+	}
 }
 
 .pure-button-primary {
@@ -105,9 +109,17 @@ small {
 	.message {
 		h3 {
 			font-size: 32px;
-			margin-top:30px;
+			margin-top:80px;
 			@media screen and (max-width: 520px) {
 				font-size: 24px;
+				margin-top: 30px;
+			}
+		}
+		h1 {
+			font-size: 46px;
+			margin-top:40%;
+			@media screen and (max-width: 520px) {
+				font-size: 26px;
 			}
 		}
 		p {
@@ -123,10 +135,16 @@ small {
 	}
 }
 
+form {
+	margin-top: 4em;
+	@media screen and (max-width: 520px) {
+		margin-top: 0.2em;
+	}
+}
+
 input.form-control {
 	display:block;
 	margin:auto !important;
-	margin-top: 1em;
 }
 
 button.pure-button {
@@ -137,7 +155,13 @@ button.pure-button {
 	margin-top: 10px !important;
 }
 
+.info {
+	font-size: 12px;
+}
 
+.info2 {
+	text-align: center;
+}
 
 
 //GRID STYLING
