--- a/style/custom.less
+++ b/style/custom.less
@@ -1,7 +1,7 @@
 @import url('fonts/clear-sans.css');
-@import "../style/main.css";
-@import "../style/buttons.css";
-@import "../style/forms.css";
+@import "main.css";
+@import "buttons.css";
+@import "forms.css";
 
 
 // VARIABLES
