--- a/style/custom.less
+++ b/style/custom.less
@@ -130,6 +130,12 @@ small {
 	.game-won, .game-over {
 		background-color: fade(desaturate(@basecolor, 15%), 70%) !important;
 	}
+	.winsocial {
+		display:none;
+		width:201px;
+		border-radius: 4px;
+		box-shadow: 0px 0px 8px fade(@basecolor, 40%);
+	}
 }
 
 form {
@@ -167,7 +173,7 @@ button.pure-button {
 
 .share {
 	display: block;
-	width:210px;
+	width:201px;
 	margin: auto;
 	strong.important {
 		font-size: 16px;
