--- a/style/custom.less
+++ b/style/custom.less
@@ -109,7 +109,7 @@ small {
 			margin-top:80px;
 			@media screen and (max-width: 520px) {
 				font-size: 24px;
-				margin-top: 30px;
+				margin-top: 10px;
 			}
 		}
 		h1 {
@@ -130,18 +130,48 @@ small {
 	.game-won, .game-over {
 		background-color: fade(desaturate(@basecolor, 15%), 70%) !important;
 	}
-	.winsocial {
-		display:none;
-		width:201px;
-		border-radius: 4px;
-		box-shadow: 0px 0px 8px fade(@basecolor, 40%);
-	}
 }
+	.dropdown {
+		display: block;
+		position: relative;
+		z-index: 100;
+		margin: auto;
+		width: 38%;
+		margin-top: 4px;
+		@media screen and (max-width: 520px) {
+		width:45%;
+		}
+	}
+	.hack{
+		position:relative;
+		text-align: center;
+	}
+	div.winsocial {
+		display:none;
+		margin-left: 50%;
+		left: -125px;
+		position: absolute;
+		z-index: 1;
+		top:-3px;
+		width:250px;
+		padding-top: 6px;
+		border-radius: 2px;
+		background-color: #e6e6e6;
+		box-shadow: 0px 0px 8px rgba(0,0,0,0.4);
+		#___plus_0 {
+			width:77px !important;
+			iframe {
+				width: 77px !important;
+			}
+		}
+	}
 
 form {
-	margin-top: 4em;
+	margin-top: 2em;
+	margin-bottom: 1em;
 	@media screen and (max-width: 520px) {
 		margin-top: 0.2em;
+		margin-bottom: 0.5em;
 	}
 }
 
@@ -155,7 +185,7 @@ button.pure-button {
 }
 
 .lower {
-	margin-top: 10px !important;
+	margin-top: 6px !important;
 }
 
 
@@ -173,7 +203,7 @@ button.pure-button {
 
 .share {
 	display: block;
-	width:201px;
+	width:210px;
 	margin: auto;
 	strong.important {
 		font-size: 16px;
