--- a/style/styles.css
+++ b/style/styles.css
@@ -57,7 +57,7 @@ small {
 @media screen and (max-width: 520px) {
   .game-container .message h3 {
     font-size: 24px;
-    margin-top: 30px;
+    margin-top: 10px;
   }
 }
 .game-container .message h1 {
@@ -82,12 +82,50 @@ small {
 .game-container .game-over {
   background-color: rgba(147, 107, 164, 0.7) !important;
 }
+.dropdown {
+  display: block;
+  position: relative;
+  z-index: 100;
+  margin: auto;
+  width: 38%;
+  margin-top: 4px;
+}
+@media screen and (max-width: 520px) {
+  .dropdown {
+    width: 45%;
+  }
+}
+.hack {
+  position: relative;
+  text-align: center;
+}
+div.winsocial {
+  display: none;
+  margin-left: 50%;
+  left: -125px;
+  position: absolute;
+  z-index: 1;
+  top: -3px;
+  width: 250px;
+  padding-top: 6px;
+  border-radius: 2px;
+  background-color: #e6e6e6;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
+}
+div.winsocial #___plus_0 {
+  width: 77px !important;
+}
+div.winsocial #___plus_0 iframe {
+  width: 77px !important;
+}
 form {
-  margin-top: 4em;
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
 @media screen and (max-width: 520px) {
   form {
     margin-top: 0.2em;
+    margin-bottom: 0.5em;
   }
 }
 input.form-control {
@@ -98,7 +136,7 @@ button.pure-button {
   margin-top: 10px;
 }
 .lower {
-  margin-top: 10px !important;
+  margin-top: 6px !important;
 }
 .info {
   font-size: 12px;
